# sfq_verifier

./: CMakeLists.txt  README.md
.cache/clangd/index/: regioned_timed_automata.cpp.8F7F24617E41F4B5.idx  test1.cpp.A2B541AA5B7F11A8.idx  timed_automata.cpp.DB4468F3BBFE5F71.idx
src/include/: automata.hpp  cta.hpp  gates.hpp  region_timed_automata.hpp  timed_automata.hpp
src/lib/: CMakeLists.txt  automata.cpp  automata2.cpp  cta.cpp  regioned_timed_automata.cpp  timed_automata.cpp
src/lib/gates/: CMakeLists.txt  and.cpp  clk.cpp  df.cpp  gate.cpp  mux.cpp  nand.cpp  nor.cpp  not.cpp  or.cpp  sync.cpp  wire.cpp  xnor.cpp  xor.cpp
test/: and.cpp  clk.cpp  nand.cpp  nor.cpp  not.cpp  or.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  xnor.cpp  xor.cpp
